@@ -5,6 +5,7 @@ ver 2.9.9 (15.00.00)
     : 임시저장 기능 오류 수정 (태양이님 제안)
     : 컨텐츠샵 관리자 링크 수정 (티비플님 제안)
     : 선택삭제 오류 수정 (세뇨르님 제안)
+    : 선택 비밀글 해제 오류 수정 (세뇨르님 제안)
 
     miwit/HISTORY
     miwit/mw.adm/mw.config.php
@@ -13,6 +14,7 @@ ver 2.9.9 (15.00.00)
     miwit/mw.proc/mw.temp.php
     miwit/write.skin.php
     miwit/list.skin.php
+    miwit/secret_all.php
  
 ver 2.9.8 (15.11.08)
     : 반응형 지원!!
